--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -33,45 +33,61 @@ import Card from '../components/Card.astro';
 				</linearGradient>
 			</defs>
 		</svg>
-		<div class="nav">
+        <div class="nav">
 			<ul>
 				<a href="/">Home</a>
 				<a href="/about">About Me</a>
 				<a href="/blog">Blog</a>
 			</ul>
 		</div>
-		
-		<h1>Welcome to <span class="text-gradient">Akshit's Blog</span></h1>
+		<h1>Welcome to <span class="text-gradient">About Me</span></h1>
 		<p class="instructions">
-			Welcome to my digital corner, where code meets creativity and algorithms dance with data! As a passionate software developer and avid Data Structures and Algorithms (DSA) enthusiast, I'm thrilled to embark on this journey of exploration and innovation with you
-		</p>
-		<ul role="list" class="link-card-grid">
-			<Card
-				href="https://www.linkedin.com/in/akshit-gupta-9941b6229/"
-				title="Linkedin"
-				body="Let's connect at the crossroads of software and data!"
-			/>
-			<Card
-				href="https://twitter.com/AKSHITGUPT49907"
-				title="Twitter"
-				body="Supercharge your project with new frameworks and libraries."
-			/>
-			<Card
-				href="https://www.instagram.com/akshitg2042/"
-				title="Instagram"
-				body="Connect with me on instagram"
-			/>
-			<Card
-				href="https://discord.com/channels/423464391791476747/423467167757893642"
-				title="Discord"
-				body="Come say hi to me on Discord and be a part of my community.❤️"
-			/>
-		</ul>
+            Software Developer and Data Structures and Algorithms (DsA) Enthusiast with a keen interest in leveraging technology to solve complex problems and drive innovation. Currently pursuing a Bvoc. in Software Development at Ramanujan College, Delhi University. Experienced in full-stack development and passionate about continuous learning and growth in the tech industry.		</p>
+            Experience:
+
+            Contributor, Social Winter of Code
+            Jan 2024 - Mar 2024
+            Contributed to open-source projects during the Social Winter of Code program.
+            Contributor, Social(Formerly Script Foundation)
+            May 2023 - Jul 2023
+            Contributed to initiatives focused on social impact and technology.
+            Technical Director, Ramanujan Consulting Club
+            Dec 2022 - May 2023
+            Led technical projects and initiatives within the consulting club.
+            Associate (Tech and Content), Ramanujan Consulting Club
+            Dec 2021 - Dec 2022
+            Contributed to technical and content-related activities of the consulting club.
+            Creative/Tech Member, Educen The Vocational Society
+            Dec 2021 - Nov 2022
+            Engaged in creative and technical projects within the vocational society.
+            Education:
+            
+            Bvoc. Software Development
+            Ramanujan College, Delhi University
+            Dec 2021 - 2024
+            Certifications:
+            
+            Microsoft Student Ambassador
+            Microsoft
+            Issued Jan 2024
+            Volunteering:
+            
+            Microsoft Student Ambassador
+            Microsoft
+            Jan 2024 - Present
+            Student Ambassadors are a global group of campus leaders dedicated to fostering tech communities and developing technical and career skills.
+            Skills:
+            
+            Full-stack Development
+            Data Structures and Algorithms
+            Technical Leadership
+            Open Source Contribution
+            Team Collaboration
 	</main>
 </Layout>
 
 <style>
-	.nav{
+    	.nav{
 		display:flex;
 		justify-content: end;
 	}
